--- a/bundles/bundle_in_ID.properties
+++ b/bundles/bundle_in_ID.properties
@@ -1,6 +1,6 @@
 ## Zeridmuth
 # Planet
-planet.zeridmuth-zeridmuth.name = 44447-HD-b
+planet.zeridmuth-zeridmuth.name = Zeridmut
 planet.zeridmuth-arvtom.name = Arvtom
 # Sectors
 sector.zeridmuth-a-new-beginning.name = Pemulaan Baru
